# lerobot-servo-adjust

./: Cargo.toml  DEVELOP.md  GUIDE.md  README.md  TODO.md  UI_TODO.md
huggingface/lerobot/calibration/robots/so101_follower/: my_awesome_follower_arm.json
huggingface/lerobot/calibration/teleoperators/so101_leader/: my_awesome_leader_arm.json
scripts/: pack.ps1  pack.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/model/: mod.rs
src/store/: mod.rs
src/web/: mod.rs
templates/: arm.html  base.html  index.html  profile.html
tests/: api.rs
